# agentops-reliability-platform

./: .coverage  .gitignore  MANIFEST.in  README.md  ROADMAP.md  alerts_production.jsonl  ci-workflow.patch  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: technical-report.md
docs/figures/: agentops-architecture.html  evaluation-pipeline.html
eval_results/: edge-cases_report.md  guardrails_report.json  guardrails_report.md  hallucination-resistance_report.md  llm-judge_report.md  multi-agent_report.md  multi-step_report.json  multi-step_report.md  prompt-engineering_report.md  regression_report.json  regression_report.md  sample_eval_report.md  structured_output_report.json  structured_output_report.md  support-tickets_report.md  systems-quality_report.md  tool-use_report.md
eval_results/alerts/: alert_critical_report.json  alert_degraded_report.json  alert_edge-threshold_report.json  alert_multi-dim-degrade_report.json
eval_results/baselines/: v1.0-development.json  v1.0-production.json
eval_results/demo/: aggregate_summary.md  compare_tool-use_production_vs_development.md  (+24 more)
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret-template.yaml  service.yaml  serviceaccount.yaml
reports/: EVALUATION_REPORT.md
scripts/: generate_prompt_demo.py
terraform/: main.tf  terraform.tfvars.example
tests/: test_ab_testing.py  test_alerting.py  test_baselines.py  test_compliance.py  test_core.py  test_cost.py  test_dashboard.py  test_evals_v4.py  test_failure_analysis.py  test_guardrails.py  test_judge.py  test_llm_module.py  test_memory.py  test_mlops_module.py  test_model_benchmark.py  test_multi_agent.py  test_multi_agent_eval.py  test_opentelemetry.py  test_prompts.py  test_readiness.py  test_regression.py  test_retrieval_module.py  test_router.py  test_sdk.py  test_security.py  test_simulator.py  test_streaming_claim_extractor.py  test_streaming_interceptor.py  test_streaming_perf.py  test_streaming_state.py  test_streaming_verifier.py  test_structured_output.py
(+181 files in other folders)
